Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
             { name: "Skillfxx", desc: "La boîte à outils ultime pour les monteurs vidéo.", url: "https://skillfxx.github.io/index.html" },
             { name: "Renderdragon", desc: "Animations, musiques et SFX haute qualité.", url: "https://renderdragon.org/" },
             { name: "Montage", desc: "Banque sonore et presets de montage indispensables.", url: "https://fileport.io/91qJeWWckEha" },
-            { name: "Ostendo", desc: "Capture d'écran optimisée pour le rendu YouTube.", url: "https://google.com" },
-            { name: "Prevyou", desc: "Prévisualisation de miniatures sur YouTube.", url: "https://google.com" },
+            { name: "Ostendo", desc: "Capture d'écran optimisée pour le rendu YouTube.", url: "https://chromewebstore.google.com/detail/ostendo-–-capture-beautif/bdfkognhpfgcoafcncpdgpjlbhoigpil" },
+            { name: "Prevyou", desc: "Prévisualisation de miniatures sur YouTube.", url: "https://chromewebstore.google.com/detail/prevyou-%E2%80%94-youtube-thumbna/lnkbdmjocdiomabiedmflmgikjlifham" },
             { name: "Mcicons", desc: "Icônes stylisées pour vos projets Minecraft.", url: "https://mcicons.ccleaf.com" },
             { name: "Noclip", desc: "Explorez les maps de vos jeux préférés.", url: "https://noclip.website" }
         ];
@@ -152,3 +152,4 @@
     </script>
 </body>
 </html>
+
